--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/firebase": "^7.5.0",
     "core-js": "^3.9.1",
+    "firebase": "^8.6.3",
     "nuxt": "^2.15.3"
   },
   "devDependencies": {
