--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@nuxtjs/firebase": "^7.5.0",
     "core-js": "^3.9.1",
     "firebase": "^8.6.3",
-    "nuxt": "^2.15.3"
+    "nuxt": "^2.15.3",
+    "nuxt-material-design-icons": "^1.0.4",
+    "nuxt-vuex-localstorage": "^1.3.0"
   },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.11.3"
