--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "nuxt-material-design-icons": "^1.0.4",
     "nuxt-vuex-localstorage": "^1.3.0",
     "vue-loader": "^15.9.7",
-    "vuetify-loader": "^1.7.2"
+    "vuetify-loader": "^1.7.2",
+    "@nuxtjs/vuetify": "^1.11.3"
   },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.11.3",
