--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@nuxtjs/firebase": "^7.5.0",
+    "cookie-universal-nuxt": "^2.1.4",
     "core-js": "^3.9.1",
     "firebase": "^8.6.3",
     "nuxt": "^2.15.3",
