--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "heroku-postbuild": "nuxt build"
   },
   "dependencies": {
+    "@nuxtjs/auth-next": "5.0.0-1622718665.cc99959",
+    "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/firebase": "^7.5.0",
     "cookie-universal-nuxt": "^2.1.4",
     "core-js": "^3.9.1",
