--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "nuxt": "^2.15.3",
     "nuxt-material-design-icons": "^1.0.4",
     "nuxt-vuex-localstorage": "^1.3.0",
+    "vue-confirm-dialog": "^1.0.2",
     "vue-loader": "^15.9.7",
     "vuetify-loader": "^1.7.2"
   },
