--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cookie-universal-nuxt": "^2.1.4",
     "core-js": "^3.9.1",
     "firebase": "^8.6.3",
+    "fs": "0.0.1-security",
     "nuxt": "^2.15.3",
     "nuxt-material-design-icons": "^1.0.4",
     "nuxt-vuex-localstorage": "^1.3.0",
