edit config to .env and fix cors

--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@nuxtjs/auth-next": "5.0.0-1622718665.cc99959",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/firebase": "^7.5.0",
+    "@nuxtjs/proxy": "^2.1.0",
     "cookie-universal-nuxt": "^2.1.4",
     "core-js": "^3.9.1",
+    "dotenv": "^10.0.0",
     "firebase": "^8.6.3",
     "fs": "0.0.1-security",
     "nuxt": "^2.15.3",
