--- a/package.json
+++ b/package.json
@@ -16,11 +16,17 @@
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/firebase": "^7.5.0",
     "@nuxtjs/proxy": "^2.1.0",
+    "axios": "^0.21.1",
+    "body-parser": "^1.19.0",
     "cookie-universal-nuxt": "^2.1.4",
     "core-js": "^3.9.1",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
+    "express": "^4.16.4",
     "firebase": "^8.6.3",
     "fs": "0.0.1-security",
+    "moment": "^2.29.1",
+    "node-fetch": "^2.6.1",
     "nuxt": "^2.15.3",
     "nuxt-material-design-icons": "^1.0.4",
     "nuxt-vuex-localstorage": "^1.3.0",
