fix axios base url bug on heroku.

--- a/.env
+++ b/.env
@@ -8,3 +8,4 @@ STORAGE_BUCKET=let-me-check-42804.appspot.com
 MESSAGING_SENDER_ID=368360154687
 APP_ID=1:368360154687:web:5884bf57a2b52dc455ba8a
 MEASUREMENT_ID=G-WJB06E2Z57
+BASE_URL=https://let-me-check.herokuapp.com
