--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.16.4",
     "firebase": "^8.6.3",
+    "firebase-admin": "^9.9.0",
     "fs": "0.0.1-security",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.33",
